# task-py

./: .gitignore  .spec.toml  2025-11-16-this-session-is-being-continued-from-a-previous-co.txt  2025-11-16-this-session-is-being-continued-from-a-previous-co2.txt  BRIEF.txt  DEPLOYMENT_READY.md  FEAT-30-PROGRESS.md  GAPS.txt  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SESSION_NOTES.md  START.txt  START.txt.before  logo.txt  pyproject.toml  pyproject.toml.bak
docs/audits/: admin-module-audit.md  blocking-module-audit.md  display-module-audit.md  epics-module-audit.md  milestones-module-audit.md  nfrs-module-audit.md  sprint-module-audit.md  workflow-module-audit.md
docs/help/: start.txt
docs/plans/: admin-module-migration.md  core-module-migration.md  display-module-migration.md  feature-module-architecture.md  legacy-elimination-execution-plan.md  migration-audit-2025-11-17.md  migration-summary.md  milestones-module-migration.md  sprint-module-migration.md  workflow-module-migration.md
docs/procs/: HANDOFF.md  TASK_AUDIT_2025-11-16.md
scripts/: backfill_auto_id.py
src/taskpy/: __init__.py  __main__.py  cli.py  commands.py  help.py  help_regression.py  models.py  output.py  storage.py
tests/: __init__.py
tests/integration/: __init__.py  test_cli.py
tests/unit/: __init__.py  conftest.py  test_legacy_views_usage.py  test_models.py  test_modern_admin_commands.py  test_modern_archival_commands.py  test_modern_blocking_commands.py  test_modern_cli.py  test_modern_core_commands.py  test_modern_display_commands.py  test_modern_epics_commands.py  (+14 more)
(+99 files in other folders)
