[project]
name = "taskpy"
version = "0.3.3"
description = "File-based agile task management tool for META PROCESS v3 workflows"
authors = [
    {name = "snekfx", email = "noreply@snekfx.dev"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "AGPLv3"}
keywords = ["task-management", "agile", "kanban", "meta-process", "project-management"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Project Management",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # TOML parsing (Python 3.11+ has tomllib built-in)
    "tomli>=2.0.0; python_version<'3.11'",
    # YAML parsing for task history
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
taskpy = "taskpy.cli:main"

[project.urls]
Homepage = "https://github.com/snekfx/task-py"
Repository = "https://github.com/snekfx/task-py"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
taskpy = ["logo.txt"]
